# Super_Helper

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  debug_startup.py  pyproject.toml  render.yaml  requirements.txt  test_groq.py  test_groq_json.py  test_router.py  vercel.json
.github/workflows/: ci.yml  daily-reflection.yml  heartbeat.yml  learn-preferences.yml  meeting-prep.yml  morning-brief.yml  scheduler.yml  self-improve.yml
api/: index.py
app/: main.py
app/bot/: handler.py  loader.py  middleware.py
app/bot/routers/: auth.py  cron.py  google_routes.py  tasks.py
app/core/: cache.py  config.py  database.py  llm.py  prompts.py  security.py
app/models/: preference_models.py  router_models.py  schemas.py
app/services/: archive_service.py  briefing_service.py  code_task_service.py  content_scanner_service.py  google_svc.py  heartbeat_service.py  igpt_service.py  improvement_service.py  llm_engine.py  market_service.py  memory_service.py  news_service.py  preference_service.py  query_service.py  router_service.py  search_service.py  synergy_service.py  task_service.py  url_service.py
local_agent/: .env.example  agent.py
sql/: user_preferences_schema.sql
tests/: conftest.py  test_cache.py  test_igpt_service.py  test_llm.py  test_market_service.py  test_router_models.py  test_task_service.py  test_url_service.py
